added some flex boxes and image folder

--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <meta name="viewport" width="device-width, inital-scale=1.0">
     <title>Sage Tafoya Portfolio</title>
     <link rel="stylesheet" href="homepage.css"/>
-    
+
 
 </head>
 
 <body>
+    
+    <div id="AuthorContainer">
+        <h1 id="PageAuthor">Sage Tafoya</h1>
+    </div>
+
+    <div id="SocialButtons">
+        <div id="imagebox"> <p>a</p></div>
+        <div id="imagebox"> <p>b</p></div>
+        <div id="imagebox"> <p>c</p></div>
+        <div id="imagebox"> <p>d</p></div>
+    </div>
 
 </body>
 
