added special images for contact information

--- a/index.html
+++ b/index.html
@@ -17,12 +17,24 @@
     </div>
 
     <div id="SocialButtons">
-        <div id="imagebox"> <p>a</p></div>
-        <div id="imagebox"> <p>b</p></div>
-        <div id="imagebox"> <p>c</p></div>
-        <div id="imagebox"> <p>d</p></div>
+        <div id="imagebox"> <a href="https://github.com/SageTafoya"><img src="images/UniformGihubLogo.png" alt="github logo" style="height: 150px; width: 150px;"></a></div>
+        <div id="imagebox"> <a href="https://github.com/SageTafoya"><img src="images/EmailTest3.png" alt="github logo" style="height: 150px; width: 150px;"></a></div>
+        <div id="imagebox"> <a href="https://github.com/SageTafoya"><img src="images/Linkedin.png" alt="github logo" style="height: 150px; width: 150px;"></a></div>
+        <div id="imagebox"> <a href="https://github.com/SageTafoya"><img src="images/Handshakelogo.png" alt="github logo" style="height: 150px; width: 150px;"></a></div>
     </div>
 
+    <div>
+        <h1>Information</h1>
+        <h2>Email: <tb> tafoyasage@gmail.com</h2>
+        <h2>Phone: 503-465-7891</h2>
+        <h2></h2>
+        <br>
+        <h1>Information</h1>
+        <br><br><br><br><br><br><br><br><br><br>
+        <h1>Information</h1>
+        <br><br><br><br><br><br><br><br><br><br>
+        <h1>Information</h1>
+    </div>
 </body>
 
 
